improvements to pdfcdf: \epsilon-->\varepsilon, p(x|y)-->p_{x|y}(x|y)

--- a/common/pdfcdf.tex
+++ b/common/pdfcdf.tex
@@ -24,9 +24,10 @@
 %=======================================
 %\section{Random Variables}
 %=======================================
-The concept of the \hie{random variable} is widely used in probability and
+The concept of the \fncte{random variable} is widely used in probability and
 random processes.
-Before what a \fncte{random variable} \emph{is}, note two things that a \fncte{random variable} is \emph{not} (next remark).
+Before discussing what a \fncte{random variable} \emph{is}, 
+note two things that a \fncte{random variable} is \emph{not} (next remark).
 %---------------------------------------
 \begin{remark}
 \footnote{
@@ -147,16 +148,16 @@ expressed in terms of either the pdf or cdf.
 %---------------------------------------
 Let $\rvX$ a \fncte{random variable} with \fncte{pdf} $\ppx$ and \fncte{cdf} $\pcx$
 \xref{def:pdf} on the \structe{probability space} $\ps$ \xref{def:ps}.\\
-\propbox{
-  \brb{\begin{array}{FMD}
+\propboxt{
+  $\brb{\begin{array}{FMD}
     (1).& $\pcx(x)$ and $\pcy(y)$ are \prope{continuous} & OR \\
     (2).& $\ppx(x)$ and $\ppy(y)$ are \prope{continuous}
-  \end{array}}
-  \quad\implies\quad
+  \end{array}}$
+  \\\quad$\implies\quad
   \brb{\begin{array}{rc>{\ds}l}
-      \ppx(x)    &=& \lim_{\epsilon\to 0} \frac{1}{\epsilon}\psp\setn{x \le \rvX < x+\epsilon}
-    \\\ppxy(x,y) &=& \lim_{\varepsilon\to 0} \frac{1}{\varepsilon}\psp\brb{x \le\rvX < x+\varepsilon \land y \le\rvY < y+\varepsilon}
-  \end{array}}
+      \ppx(x)    &=& \lim_{\varepsilon\to 0} \frac{1}{\varepsilon}\psp\setn{x \le \rvX < x+\varepsilon}
+    \\\ppxy(x,y) &=& \lim_{\varepsilon\to 0} \frac{1}{\varepsilon}\psp\setn{x \le \rvX < x+\varepsilon \land y \le\rvY < y+\varepsilon}
+  \end{array}}$
   }
 \end{proposition}
 \begin{proof}
@@ -165,7 +166,7 @@ Let $\rvX$ a \fncte{random variable} with \fncte{pdf} $\ppx$ and \fncte{cdf} $\p
     &\eqd \ddx\pcx(x)
     && \text{by definition of $\ppx$}
     && \text{\xref{def:pdf}}
-  \\&=    \lim_{\epsilon\to 0} \frac{1}{\epsilon}\psp\set{x\in\R}{x \le \rvX < x+\epsilon}
+  \\&=    \lim_{\varepsilon\to 0} \frac{1}{\varepsilon}\psp\set{x\in\R}{x \le \rvX < x+\varepsilon}
     && \text{by definition of $\ddx$}
     && \text{\xref{def:ddx}}
 \end{align*}
@@ -177,7 +178,6 @@ Let $\rvX$ a \fncte{random variable} with \fncte{pdf} $\ppx$ and \fncte{cdf} $\p
 %---------------------------------------
 Let $\ps$ be a probability space,
 $\rvX$ be a random variable, and $(a,b)$ a real interval.
-Then
 \thmbox{
   \brb{\begin{array}{FMD}
     (1).& $\pcx(x)$ is \prope{continuous} & OR \\
@@ -216,10 +216,10 @@ Then
 %---------------------------------------
 Let $\ps$ be a \structe{probability space},
 $\rvX$ be a \fncte{random variable}, and $\intoo{a}{b}$ a \structe{real interval}.
-\thmbox{\begin{array}{rc>{\ds}l}
+\thmbox{\begin{array}{>{\ds}l}
   \psp\setn{a\le\rvX<b}
-    &=& \int_a^b \ppx(x) \dx
-  \\&=& \int_{-\infty}^b \pcx(x) \dx - \int_{-\infty}^a \pcx(x) \dx
+     =  \int_a^b \ppx(x) \dx
+     =  \int_{-\infty}^b \pcx(x) \dx - \int_{-\infty}^a \pcx(x) \dx
 \end{array}}
 \end{theorem}
 
@@ -227,27 +227,57 @@ The properties of the pdf follow closely the properties of \fncte{measure} $\psp
 %---------------------------------------
 \begin{theorem}
 %---------------------------------------
-\thmbox{\begin{array}{rc>{\ds}l}
-  \pp(x|y) &=& \frac{\pp(x,y)}{\pp(y)}  \\
-  \ppx(x)  &=& \int_{y\in\R}\ppxy(x,y) \dy
-\end{array}}
+\thmbox{
+  \brb{\begin{array}{FMD}
+    (A).& $\pcx(x)$ is \prope{continuous} & OR \\
+    (B).& $\ppx(x)$ is \prope{continuous}
+  \end{array}}
+  \quad\implies\quad
+  \brb{\begin{array}{Frc>{\ds}lD}
+    (1).& \ppxcy(x|y) &=& \frac{\ppxy(x,y)}{\ppy(y)} & and \\
+    (2).& \ppx(x)     &=& \int_{y\in\R}\ppxy(x,y) \dy
+  \end{array}}
+  }
 \end{theorem}
 \begin{proof}
 \begin{align*}
-  \ppx[x|y](x|y)
-    &\eqd \lim_{\epsilon\to0} \frac{1}{\epsilon} \psp\set{x\le\rvX < x+\epsilon}{\rvY=y}
-  \\&\eqd \lim_{\epsilon\to0} \frac{1}{\epsilon} \frac{\psp\setn{(x\le\rvX < x+\epsilon) \land (\rvY=y)}}
-                                                      {\psp\setn{\rvY=y}}
-  \\&=    \lim_{\epsilon\to0} \frac{1}{\epsilon} \frac{\psp\setn{(x\le\rvX < x+\epsilon) \land (y\le\rvY<y+h)}}
-                                                      {\psp\setn{y\le\rvY<y+\epsilon}}
-  \\&\eqd \frac{\ppxy(x,y)}{\ppy(y)}
+  \ppxcy(x|y)
+    &\eqd \ddx\pcxcy(x|y)
+    && \text{by definition of $\pcx$}
+    && \text{\xref{def:conprob}}
+  \\&\eqd \lim_{\varepsilon\to0} \frac{1}{\varepsilon} \psp\set{x\le\rvX < x+\varepsilon}{\rvY=y}
+    && \text{by definition of $\ddx$}
+    && \text{\xref{def:ddx}}
+  \\&\eqd \lim_{\varepsilon\to0} 
+          \frac{1}{\varepsilon} 
+          \frac{\ds\psp\setn{(x\le\rvX < x+\varepsilon) \land (\rvY=y)}}
+               {\ds\psp\setn{\rvY=y}}
+    && \text{by definition of $\psP\set{\setA}{\setB}$}
+    && \text{\xref{def:conprob}}
+  \\&= \lim_{\varepsilon\to0} 
+       \frac{1}{\varepsilon} 
+       \frac{\ds\psp\setn{(x\le\rvX < x+\varepsilon) \land (y\le\rvY<y+\varepsilon)}}
+            {\ds\psp\setn{y\le\rvY<y+\varepsilon}}
+    && \text{by \prope{continuity} hypothesis}
+  \\&=  \frac{\ds\lim_{\varepsilon\to0} \frac{1}{\varepsilon}\psp\setn{(x\le\rvX < x+\varepsilon) \land (y\le\rvY<y+\varepsilon)}}
+             {\ds\lim_{\varepsilon\to0}                      \psp\setn{y\le\rvY<y+\varepsilon}}
+    && \text{by property of $\ds\lim_{\varepsilon\to0}$}
+  \\&=    \frac{\ppxy(x,y)}{\ppy(y)}
+    && \text{by \prefp{prop:pdfddx}}
 \\
 \\
   \int_{y\in\R}\ppxy(x,y)\dy
-    &\eqd \lim_{\epsilon\to0} \frac{1}{\epsilon}
-          \int_{y\in\R} \psp\setn{x\le\rvX<x+\epsilon, y\le\rvY<y+\epsilon} \dy
-  \\&=    \lim_{\epsilon\to0} \frac{1}{\epsilon} \psp\setn{x\le\rvX<x+\epsilon}
-  \\&\eqd \ppx(x)
+    &\eqd \int_{y\in\R} \brs{ \ddy\ddx\pcxy(x,y) } \dy
+    && \text{by definition of $\ppx$}
+    && \text{\xref{def:pdf}}
+  \\&= \ddx\pcxy(x,y) 
+  \\&\eqd \lim_{\varepsilon\to0} \frac{1}{\varepsilon}
+          \int_{y\in\R} \psp\setn{x\le\rvX<x+\varepsilon, y\le\rvY<y+\varepsilon} \dy
+    && \text{by definition of $\ddx$}
+    && \text{\xref{def:ddx}}
+  \\&=    \lim_{\varepsilon\to0} \frac{1}{\varepsilon} \psp\setn{x\le\rvX<x+\varepsilon}
+  \\&= \ppx(x)
+    && \text{by \prefp{prop:pdfddx}}
 \end{align*}
 \end{proof}
 
@@ -263,12 +293,19 @@ The properties of the pdf follow closely the properties of \fncte{measure} $\psp
 \begin{proof}
 \begin{align*}
   \pcx(\sup\R)
-    &\eqd \psp\setn{\rvX\le\sup\R} && \text{by definition of $\pcx$} &&\text{\xref{def:cdf}}
-  \\&=    1                  && \text{by definition of $\psp$} &&\text{\xref{def:psp}}
+    &\eqd \psp\setn{\rvX\le\sup\R} 
+    && \text{by definition of $\pcx$} 
+    &&\text{\xref{def:cdf}}
+  \\&=    1                  
+    %&& \text{by definition of $\psp$} 
+    %&&\text{\xref{def:psp}}
   \\
   \pcx(\inf\R)
-    &\eqd \psp\setn{\rvX\le\inf\R} && \text{by definition of $\pcx$} &&\text{\xref{def:cdf}}
-  \\&=    0                  && \text{by definition of $\psp$} &&\text{\xref{def:psp}}
+    &\eqd \psp\setn{\rvX\le\inf\R} 
+    && \text{by definition of $\pcx$} &&\text{\xref{def:cdf}}
+  \\&=    0                  
+    %&& \text{by definition of $\psp$} 
+    %&&\text{\xref{def:psp}}
 \end{align*}
 \end{proof}
 
@@ -312,9 +349,9 @@ The properties of the pdf follow closely the properties of measure $\psp$.
 \end{align*}
 
 \begin{align*}
-  %\ppx[x|y](x|y)
+  %\ppxcy(x|y)
   %  &\eqd \lim_{h\to0} \frac{1}{h} \psp\setn{x\le\rvX < x+h | Y=y}
-  %  &&    \text{by definition of $\ppx[x|y](x|y)$}
+  %  &&    \text{by definition of $\ppxcy(x|y)$}
   %  &&    \text{\xref{def:conpdf}}
   %\\&\eqd \lim_{\varepsilon\to0} \frac{1}{\varepsilon} \frac{\psp\setn{(x\le\rvX < x+\varepsilon) \land (Y=y)}}{\psp\setn{Y=y}}
   %  &&    \text{by definition of $\psp\setn{\rvX|\rvY}$}
