--- a/common/random.tex
+++ b/common/random.tex
@@ -88,27 +88,26 @@ and \prefp{fig:X(t,w)graph}.
 \label{def:Rxx}
 \label{def:opR}
 \label{def:Rxy}
-\index{cross-correlation }
-\index{correlation!cross-correlation }
-\index{Fredholm integral equation of the first kind}
 %---------------------------------------
 Let $\rvx(t)$ and $\rvy(t)$ be random processes.\\
-\defbox{\begin{array}{MlMlc>{\ds}l}
-     The \fnctd{mean}                     & \pmeanx(t) & of $\rvx(t)$              is & \pmeanx(t)&\eqd& \pE\brs{\rvx(t)}                    %& \text{(\prope{mean functional})} \\
-   \\The \fnctd{crosscorrelation}         & \Rxy(t)    & of $\rvx(t)$ and $\rvy(t)$is & \Rxy(t,u) &\eqd& \pE\brs{\rvx(t)\rvy^\ast(u)}        %& \text{(\prope{cross-correlation bilinear functional})} \\
-   \\The \fnctd{autocorrelation function} & \Rxx(t)    & of $\rvx(t)$              is & \Rxx(t,u) &\eqd& \pE\brs{\rvx(t)\rvx^\ast(u)}        %& \text{(\prope{auto-correlation bilinear functional})} \\
-   \\The \fnctd{autocorrelation operator} & \opR\ff    & of $\ff(t)$               is & \opR f    &\eqd& \int_{u\in\R}\Rxx(t,u)\ff(u) \du     %& \text{(\prope{auto-correlation operator})}
-\end{array}}
+\defbox{
+  \begin{array}{MlMlc>{\ds}l}
+       The \fnctd{mean}                     & \pmeanx(t) & of $\rvx(t)$              is & \pmeanx(t)&\eqd& \pE\brs{\rvx(t)}                    %& \text{(\prope{mean functional})} \\
+     \\The \fnctd{crosscorrelation}         & \Rxy(t)    & of $\rvx(t)$ and $\rvy(t)$is & \Rxy(t,u) &\eqd& \pE\brs{\rvx(t)\rvy^\ast(u)}        %& \text{(\prope{cross-correlation bilinear functional})} \\
+     \\The \fnctd{autocorrelation function} & \Rxx(t)    & of $\rvx(t)$              is & \Rxx(t,u) &\eqd& \pE\brs{\rvx(t)\rvx^\ast(u)}        %& \text{(\prope{auto-correlation bilinear functional})} \\
+     \\The \fnctd{autocorrelation operator} & \opR\ff    & of $\ff(t)$               is & \opR f    &\eqd& \int_{u\in\R}\Rxx(t,u)\ff(u) \du     %& \text{(\prope{auto-correlation operator})}
+  \end{array}
+  }
 \end{definition}
 
 %---------------------------------------
 \begin{remark}
 \footnote{
-     \citer{fredholm1900},
-     \citerp{fredholm1903}{365},
-     \citerp{michel1993}{97},
-     \citerp{keener}{101}
-   }
+  \citer{fredholm1900},
+  \citerp{fredholm1903}{365},
+  \citerp{michel1993}{97},
+  \citerp{keener}{101}
+  }
 %---------------------------------------
 The equation $\int_{u\in\R}\Rxx(t,u)\ff(u) \du$ is a
    \ope{Fredholm integral equation of the first kind} and
