--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -67,7 +67,7 @@
 \newcommand{\fnctb}[1]{\textbf{#1}\index{#1}\index{functions!#1}}               % place here with emphasis and in the index and under index theorems! heading
 \newcommand{\rele}[1]{\emph{#1}\index{#1}\index{relations!#1}}                  % place here with emphasis and in the index and under index theorems! heading
 \newcommand{\reld}[1]{\textbf{#1}\index{#1|textbf}\index{relations!#1|textbf}}  % place here with emphasis and in the index and under index theorems! heading
-\newcommand{\sete}[1]{\emph{#1}\index{#1}\index{sets!#1}}                       
+\newcommand{\sete}[1]{\emph{#1}\index{#1}\index{sets!#1}}
 \newcommand{\thm} [1]{#1\index{#1}\index{theorems!#1}}                          % place here and in the index and under index theorems! heading
 \newcommand{\thmd}[1]{#1\index{#1|textbf}\index{theorems!#1|textbf}}            % place here and in the index and under index theorems! heading
 \newcommand{\thme}[1]{\emph{#1}\index{#1}\index{theorems!#1}}                   % place here with emphasis and in the index and under index theorems! heading
@@ -100,7 +100,7 @@
 \newcommand{\seqe}[1]{\emph{#1}\index{#1}\index{sequences!#1}}                  % place here with emphasis and in the index and under index structures! heading
 \newcommand{\vale}[1]{\emph{#1}\index{#1}\index{values!#1}}                     % place here with emphasis and in the index and under index values! heading
 \newcommand{\vald}[1]{\textbf{#1}\index{#1|textbf}\index{values!#1|textbf}}     % place here with emphasis and in the index and under index values! heading
-                                     
+
 
 \newcommand{\pref}  [1]{{\prettyref{#1}}}                                       % prefixed reference
 \newcommand{\prefp} [1]{{\prettyref{#1} {\scriptsize page}~\pageref{#1}}}       % prefixed reference with page number
@@ -172,8 +172,8 @@
 \newcommand{\trirel}{{\declareslashed{}{\vartriangle}{0}{0.1}{\bigcirc}\slashed{\bigcirc}}}%
 \newcommand{\trirelD}{\trirel(p,\sigma;\distancen)}% default power triangle relation
 
-\DeclareUTFcharacter[\UTFencname]{x24C7}{\relation}    % circled R  general relation                   
-\DeclareUTFcharacter[\UTFencname]{x24C8}{\relationa}   % circled S  alternative general relation       
+\DeclareUTFcharacter[\UTFencname]{x24C7}{\relation}    % circled R  general relation
+\DeclareUTFcharacter[\UTFencname]{x24C8}{\relationa}   % circled S  alternative general relation
 \DeclareUTFcharacter[\UTFencname]{x24C6}{\relationb}   % circled Q  second alternative general relation
 \DeclareUTFcharacter[\UTFencname]{x24B8}{\commutes}    % circled C  commutes relation
 \DeclareUTFcharacter[\UTFencname]{x24C2}{\modular}     % circled M  modular relation
@@ -250,11 +250,11 @@
  \newcommand{\clFxx} [0]{\clF{\setX}{\setX}}             % set of functions f:X-->X
  \newcommand{\clFwx} [0]{\clF{\setW}{\setX}}             % set of functions f:W-->X
  \newcommand{\clFxf} [0]{\clF{\spX}{\F}}                 % set of functions f:X-->F (functionals)
- \newcommand{\clFxxf} [0]{\clF{\setX\times\setX}{\F}}    % set of bilinear functionals f:XxX-->F 
- \newcommand{\clFxxr} [0]{\clF{\setX\times\setX}{\R}}    % set of bilinear functionals f:XxX-->F 
+ \newcommand{\clFxxf} [0]{\clF{\setX\times\setX}{\F}}    % set of bilinear functionals f:XxX-->F
+ \newcommand{\clFxxr} [0]{\clF{\setX\times\setX}{\R}}    % set of bilinear functionals f:XxX-->F
  \newcommand{\clFxr} [0]{\clF{\spX}{\R}}                 % set of functions f:X-->R (functionals)
- \newcommand{\clFcr} [0]{\clF{\C}{\R}}                   % set of functions f:C-->R 
- \newcommand{\clFrz} [0]{\clF{\R}{\Z}}                   % set of functions f:R-->Z 
+ \newcommand{\clFcr} [0]{\clF{\C}{\R}}                   % set of functions f:C-->R
+ \newcommand{\clFrz} [0]{\clF{\R}{\Z}}                   % set of functions f:R-->Z
  \newcommand{\clFor} [0]{\clF{\pso}{\R}}                 % set of random variables:  Omega-->R
  \newcommand{\clFxxx}[0]{\clF{\setX\times\setX}{\setX}}  % set of functions f:X^2-->X
  \newcommand{\clFhh} [0]{\clF{\setX}{\setX}}             % set of functions f:H-->H
@@ -359,16 +359,16 @@
  % 5=complement operator
  % 6=0
  % 7=1
- \newcommand{\latc}[7]{\left(\,#1,\, #3,\, #4,\, #5,\, #6,\, #7\,;\,#2\right)} % complemented lattice: 
+ \newcommand{\latc}[7]{\left(\,#1,\, #3,\, #4,\, #5,\, #6,\, #7\,;\,#2\right)} % complemented lattice:
  \newcommand{\latn}[7]{\left(\,#1,\, #3,\, #4,\, #5,\, #6,\, #7\,;\,#2\right)} % lattice with negation
  \newcommand{\latb}[6]{\left(\,#1,\, #3,\, #4,\, #5,\, #6\,;\,#2\right)} % bounded lattice
  \newcommand{\booalg}[7]{\left(\,#1,\, #3,\, #4,\, #6,\, #7\,;\,#2\right)} % Boolean algebra
  \newcommand{\latoc}[7]{\left(\,#1,\, #3,\, #4,\, #6,\, #7\,;\,#2\right)} % ortho complemented lattice
- \newcommand{\logic}[8]{\left(\,#1,\, #3,\, #4,\, #5,\, #6,\, #7\,;\,#2,\,#8\right)} % complemented lattice: 
+ \newcommand{\logic}[8]{\left(\,#1,\, #3,\, #4,\, #5,\, #6,\, #7\,;\,#2,\,#8\right)} % complemented lattice:
 
  \newcommand{\osetd}[0]{\oset{\setX}{\orel}}% default ordered set
  \newcommand{\latticed}[0]{\lattice{\setX}{\orel}{\join}{\meet}}% default lattice
- \newcommand{\latticeD}[0]{\lattice{\setD}{\orel}{\join}{\meet}}% 
+ \newcommand{\latticeD}[0]{\lattice{\setD}{\orel}{\join}{\meet}}%
  \newcommand{\latnX}[0]{\latn{\setX}{\orel}{\join}{\meet}{\negat}{\bzero}{\bid}}% bounded lattice with negation
  \newcommand{\logicX}[0]{\logic{\setX}{\orel}{\join}{\meet}{\negat}{\lF}{\lT}{\imp}}% bounded lattice with negation
  \newcommand{\logicTF}[0]{\logic{\setn{\lT,\lF}}{\orel}{\join}{\meet}{\negat}{\lF}{\lT}{\limpc}}% bounded lattice with negation
@@ -382,7 +382,7 @@
  \newcommand{\booalgX}[0]{\latbX}
  \newcommand{\latcd}{\latbX}
  \newcommand{\latcX}{\latbX}
- 
+
  \newcommand{\setbad}[0]{\booalg{\ssetS}{\subseteq}{\setu}{\seti}{\setopc}{\szero}{\sid}}% default set structure Boolean algebra
  \newcommand{\slattice}[3]{\left(\,#1,\, #2,\, #3\right)} % semilattice
  \newcommand{\slatticejd}{\slattice{\setX}{\orela}{\joina}} % default join semilattice
@@ -401,7 +401,7 @@
 %--------------------------------------
  \newcommand{\oset}[2]{\left(\,#1,\, #2\right)} % ordered set
  \newcommand{\preorderrel}{\sqsubseteq}        % preorder relation
- \newcommand{\divides}    {|}  
+ \newcommand{\divides}    {|}
  \newcommand{\orel}       {\le}                % order relation
  \newcommand{\oreld}      {\ge}                % dual order relation
  \newcommand{\qrel}       {<}                  % quasi-order relation
@@ -413,10 +413,10 @@
  \newcommand{\meetop}     {\bigwedge}          % meet operation
  \newcommand{\joinop}     {\bigvee  }          % join operation
  \newcommand{\osetX}{\oset{\setX}{\orel}} % ordered set (X,<=)
- \newcommand{\latX}[0]{\lattice{\setX}{\orel}{\join}{\meet}}% 
- \newcommand{\latY}[0]{\lattice{\setY}{\orel}{\join}{\meet}}% 
- \newcommand{\latticeX}[0]{\lattice{\setX}{\orel}{\join}{\meet}}% 
- \newcommand{\latticeY}[0]{\lattice{\setY}{\orel}{\join}{\meet}}% 
+ \newcommand{\latX}[0]{\lattice{\setX}{\orel}{\join}{\meet}}%
+ \newcommand{\latY}[0]{\lattice{\setY}{\orel}{\join}{\meet}}%
+ \newcommand{\latticeX}[0]{\lattice{\setX}{\orel}{\join}{\meet}}%
+ \newcommand{\latticeY}[0]{\lattice{\setY}{\orel}{\join}{\meet}}%
  \newcommand{\latXmm}[0]{\lattice{\setX}{\orel}{\max}{\min}}% lattice (X, max, min; <=)
  %
  \newcommand{\orelsq}     {\sqsubseteq}        % alternative order relation
@@ -428,12 +428,12 @@
  \newcommand{\joinopsq}   {\bigsqcup}          % square style join operator
  \newcommand{\meetopsq}   {\bigsqcap}          % square style meet operator
  \newcommand{\osetsqY}{\oset{\setY}{\orelsq}}  % ordered set (Y,[=)
- \newcommand{\latYsq}[0]{\lattice{\setY}{\orelsq}{\joinsq}{\meetsq}}% 
+ \newcommand{\latYsq}[0]{\lattice{\setY}{\orelsq}{\joinsq}{\meetsq}}%
  \newcommand{\orela}      {\eqless}            % alternative order relation
  \newcommand{\qrela}      {\ltcir}             % alternative order relation
- \newcommand{\orelb}      {\trianglelefteq}    % 
- \newcommand{\orelo}      {\trianglelefteq}    % 
- \newcommand{\qrelb}      {\vartriangleleft}    % 
+ \newcommand{\orelb}      {\trianglelefteq}    %
+ \newcommand{\orelo}      {\trianglelefteq}    %
+ \newcommand{\qrelb}      {\vartriangleleft}    %
  \newcommand{\orelad}     {\ogreaterthan}      % alternative order relation dual
  \newcommand{\porel}      {\unlhd}             % partition of sets ordering relation
  \newcommand{\orelbd}     {\gtcir}             % dual of second alternative order relation
@@ -570,7 +570,7 @@
  \newcommand{\csimplby}{\adjunction} % 1101, 13
  \newcommand{\csor}    {\lor}        % 1110, 14
  \newcommand{\csid}    {1}           % 1111, 15
-                                     
+
  \newcommand{\csnot}   {\lnot}       %
 
 %--------------------------------------
@@ -625,7 +625,7 @@
 \newcommand{\setTh}{\Theta}
 \newcommand{\setPsi}{\Psi}
 \newcommand{\setPhi}{\Phi}
-\newcommand{\setFsigma}{\setXYZ{F}_{\sigma}} % countable union of closed sets 
+\newcommand{\setFsigma}{\setXYZ{F}_{\sigma}} % countable union of closed sets
 \newcommand{\setGdelta}{\setXYZ{G}_{\delta}} % countable intersection of open sets
 
 \newcommand{\setAo}{\setXYZo{A}}
@@ -681,8 +681,8 @@
 \newcommand{\set}[2]{\left\{#1|#2\right\}}
 \newcommand{\setbigleft}[2]{\left\{\left.{#1}\right|{#2}\right\}}
 \newcommand{\setn}[1]{{\left\{{#1}\right\}}}
-\newcommand{\setxn}[1]{\setbigleft{#1}{\scy n=1,2,\ldots,\xN}} % 
-\newcommand{\setxN}[1]{\setbigleft{#1}{\scy n=1,2,\ldots,\xN}} % 
+\newcommand{\setxn}[1]{\setbigleft{#1}{\scy n=1,2,\ldots,\xN}} %
+\newcommand{\setxN}[1]{\setbigleft{#1}{\scy n=1,2,\ldots,\xN}} %
 \newcommand{\setxZp}[1]{\setbigleft{#1}{\scy n\in\Zp}} % set over Zp
 \newcommand{\setxZ}[1]{\setbigleft{#1}{\scy n\in\Z}} % set over Z
 \newcommand{\setnZ}[1]{\setbigleft{#1}{\scy n\in\Z}} % set over Z
@@ -1200,8 +1200,8 @@
 \newcommand{\opG}  {\opXYZ {G}    } %
 \newcommand{\opH}  {\opXYZ {H}    } %
 \newcommand{\opP}  {\opXYZ {P}    } % projection
-\newcommand{\opQ}  {\opXYZ {Q}    } % 
-\newcommand{\opQi} {\opXYZi{Q}    } % 
+\newcommand{\opQ}  {\opXYZ {Q}    } %
+\newcommand{\opQi} {\opXYZi{Q}    } %
 \newcommand{\opPa} {\opXYZa{P}    } %
 \newcommand{\opU}  {\opXYZ {U}    } % unitary
 \newcommand{\opUa} {\opXYZa{U}    } %
@@ -1212,17 +1212,17 @@
 \newcommand{\opN}  {\opXYZ {N}    } % normal
 \newcommand{\opNa} {\opXYZa{N}    } %
 \newcommand{\opS}  {\opXYZ {S}    } % self adjoint
-\newcommand{\opSi} {\opXYZi{S}    } % 
+\newcommand{\opSi} {\opXYZi{S}    } %
 \newcommand{\opSa} {\opXYZa{S}    } %
 \newcommand{\opR}  {\opXYZ {R}    } %
 \newcommand{\opRa} {\opXYZa{R}    } %
 \newcommand{\opRi} {\opXYZi{R}    } %
 \newcommand{\opRo} {\opXYZ {R}^\circ} %
 
-\newcommand{\opD}  {\opXYZ {D}    } % 
+\newcommand{\opD}  {\opXYZ {D}    } %
 \newcommand{\opDa} {\opXYZa{D}    } %
 \newcommand{\opDi} {\opXYZi{D}    } %
-\newcommand{\opT}  {\opXYZ {T}    } % 
+\newcommand{\opT}  {\opXYZ {T}    } %
 \newcommand{\opTa} {\opXYZa{T}    } %
 \newcommand{\opTi} {\opXYZi{T}    } %
 
@@ -1296,9 +1296,9 @@
 
 \newcommand{\Dn}[1][n]{\fnct{D}_{#1}}  % Dirichlet kernel D_n
 \newcommand{\Kn}[1][n]{\fnct{K}_{#1}}  % Fejer's Kernel K_n
-\newcommand{\Vn}[1][n]{\fnct{V}_{#1}}  % 
-\newcommand{\Jn}[1][n]{\fnct{J}_{#1}}  % 
-\newcommand{\Pn}[1][n]{\fnct{P}_{#1}}  % 
+\newcommand{\Vn}[1][n]{\fnct{V}_{#1}}  %
+\newcommand{\Jn}[1][n]{\fnct{J}_{#1}}  %
+\newcommand{\Pn}[1][n]{\fnct{P}_{#1}}  %
 
 \newcommand{\lkern}[2]{\ensuremath{\fkappa\left(#1,\,#2\right)}}  % Laplace kernel k(t,w)
 \newcommand{\lkerna}[2]{\ensuremath{\fkappa^\ast\left(#1,\,#2\right)}}  % Laplace kernel conjugate k*(t,w)
@@ -1386,8 +1386,8 @@
 \newcommand{\spCC}[0]{\clFcc}   % f:R->R
 \newcommand{\spFF}[0]{\clF{\F}{\F}}   % f:F->F
 \newcommand{\spL}[0]{\mbfitsansL}           % a linear space
-\newcommand{\spLp}[2]{\mbfitsansL_{#2}^{\mathsfup{#1}}}         % 
-\newcommand{\spLpXSu}[4]{\mbfitsansL^{\mathsfup{#1}}_{\otriple{#2}{#3}{#4}}}         % 
+\newcommand{\spLp}[2]{\mbfitsansL_{#2}^{\mathsfup{#1}}}         %
+\newcommand{\spLpXSu}[4]{\mbfitsansL^{\mathsfup{#1}}_{\otriple{#2}{#3}{#4}}}         %
 \newcommand{\spLLF}[0]{\spLp{2}{\F}}   % {f:R->C | f is square integrable}
 \newcommand{\spLLR}[0]{\spLp{2}{\R}}   % {f:R->C | f is square integrable}
 \newcommand{\spLLRBu}[0]{\spLpXSu{2}{\R}{\borel}{\msm}}  % L^2(R,B,u)
@@ -1398,7 +1398,7 @@
 \newcommand{\spLL}[1][\R]{\spLp{2}{#1}}   % {f:R->C | f is square integrable}
 \newcommand{\spLLab}[2]{\spLp{2}{\intoo{#1}{#2}}}   % {f:R->C | f is square integrable}
 \newcommand{\spPP}[0]{\mbfitsansP^2(\R)}   % {f:R->C | f is finite periodic  }
-\newcommand{\splp}[2]{\mbfscrl_{#2}^{\mathsfup{#1}}}         % 
+\newcommand{\splp}[2]{\mbfscrl_{#2}^{\mathsfup{#1}}}         %
 \newcommand{\splF}[0]{\splp{1}{\F}}         % l_1(F)
 \newcommand{\splR}[0]{\splp{1}{\R}}         % l_1(F)
 \newcommand{\spllF}[0]{\splp{2}{\F}}         % l_2(R)
@@ -1534,31 +1534,40 @@
 %--------------------------------------
 % probability space
 %--------------------------------------
- \newcommand{\pso} [0] {\Omega}             % set of outcomes of an experiment
- \newcommand{\pse} [0] {\BbbE}              % sigma-algebra of events
- \newcommand{\psp} [0] {\mathsfup{P}}       % probability measure function
- \newcommand{\psL} [0] {\latL}       
- \newcommand{\ps}  [0] {\otriple{\pso}{\pse}{\psp}} % probability space
- \newcommand{\pP}[1]   {\psp\left\{#1\right\}}
- \newcommand{\pPa}[2]  {\psp\left\{\left[\left.\left.#1\right]\land\right[#2\right]\right\}}
- \newcommand{\pPc}[2]  {\psp\left\{\left. #1 \;\right|\; #2 \right\}} % deprecated
+ \newcommand{\pso} [0] {\Omega}          % 20181117 deprecated   % set of outcomes of an experiment
+ \newcommand{\pse} [0] {\BbbE}           % 20181117 deprecated   % sigma-algebra of events
+ \newcommand{\psp} [0] {\mathsfup{P}}    % 20181117 deprecated   % probability measure function
+
+\newcommand{\psO} [0] {\Omega}       % probability space outcomes
+\newcommand{\psE} [0] {\BbbE}        % probability space events
+\newcommand{\psP} [0] {\mathsfup{P}} % probability space probability measure
+
+
+
+\newcommand{\psL} [0] {\latL}
+\newcommand{\ps}  [0] {\otriple{\psO}{\psE}{\psP}} % probability space
+\newcommand{\pP}[1]   {\psp\left\{#1\right\}}                                                % 20181117 deprecated
+\newcommand{\pPa}[2]  {\psp\left\{\left[\left.\left.#1\right]\land\right[#2\right]\right\}}  % 20181117 deprecated
+\newcommand{\pPc}[2]  {\psp\left\{\left. #1 \;\right|\; #2 \right\}} % deprecated            % 20181117 deprecated
 %--------------------------------------
 % probability density functions
 %--------------------------------------
- \newcommand{\pp}    [1][p]{\mathfnct{#1}}%
- \newcommand{\pc}    [1][c]{\mathfnct{#1}}%
- \newcommand{\ppx}   [1][X]{\pp_{\mbox{\tiny$\fnct{#1}$}}}%
- \newcommand{\pcx}   [1][X]{\pc_{\mbox{\tiny$\fnct{#1}$}}}%
- 
+ \newcommand{\pp}    [1][p]{\mathfnct{#1}}% pdf (probability density function)
+ \newcommand{\pc}    [1][c]{\mathfnct{#1}}% cdf (cummulative distribution function)
+ \newcommand{\ppx}   [1][X]{\pp_{\mbox{\tiny$\fnct{#1}$}}}% pdf of X
+ \newcommand{\pcx}   [1][X]{\pc_{\mbox{\tiny$\fnct{#1}$}}}% cdf of X
+
  \newcommand{\ppy}   [0]{\ppx[Y]}
  \newcommand{\ppz}   [0]{\ppx[Z]}
  \newcommand{\pcy}   [0]{\pcx[Y]}
  \newcommand{\pcz}   [0]{\pcx[Z]}
  \newcommand{\ppr}   [0]{\ppx[R]}
  \newcommand{\ppth}  [0]{\ppx[\theta]}
- 
+
  \newcommand{\ppxy}  [0]{\ppx[XY]}
  \newcommand{\ppyx}  [0]{\ppx[YX]}
+ \newcommand{\ppxgy} [0]{\ppx[X|Y]} % pdf of X given Y
+
  \newcommand{\pcxy}  [0]{\pcx[XY]}
  \newcommand{\ppb}   [1] {\mathfnct{p\left[#1\right]}}
  \newcommand{\pq}    [0] {\pp[q]}
@@ -1615,13 +1624,13 @@
 %--------------------------------------
 % random variables
 %--------------------------------------
-\newcommand{\rvp}[0]{\mbfp}     
-\newcommand{\rvq}[0]{\mbfq}     
-\newcommand{\rvx}[0]{\mbfx}     
-\newcommand{\rvW}[0]{\fnct{W}}  
-\newcommand{\rvX}[0]{\fnct{X}}  
-\newcommand{\rvY}[0]{\fnct{Y}}  
-\newcommand{\rvZ}[0]{\fnct{Z}}  
+\newcommand{\rvp}[0]{\mbfp}
+\newcommand{\rvq}[0]{\mbfq}
+\newcommand{\rvx}[0]{\mbfx}
+\newcommand{\rvW}[0]{\fnct{W}}
+\newcommand{\rvX}[0]{\fnct{X}}
+\newcommand{\rvY}[0]{\fnct{Y}}
+\newcommand{\rvZ}[0]{\fnct{Z}}
 \newcommand{\rvy}[0]{\mbfy}
 \newcommand{\rvr}[0]{\mbfr}
 \newcommand{\rvt}[0]{\mbftheta}
@@ -1722,13 +1731,13 @@
  \newcommand{\estNP}  [1][\theta] {\est[#1]{np}}  % Neyman-Pearson
  \newcommand{\estMS}  [1][\theta] {\est[#1]{mms}} % minimum mean square
  \newcommand{\estLS}  [1][\theta] {\est[#1]{ls}} % least square
- 
+
  \newcommand{\fCost}[0]{\ensuremath{C}}
  \newcommand{\vpo  } [0]{\vp_{\mathsfup{opt}}}
  \newcommand{\vpio } [0]{\ensuremath{\check{\vpo}}}
  \newcommand{\vpe  } [0]{\ensuremath{\hat{\vp}}}
  \newcommand{\p   } [0]{\ensuremath{\theta}}
- 
+
  \newcommand{\hhcmp}[0]{\ensuremath{\mathrm{h}}}
  \newcommand{\hhcmpf}[0]{\ft{\hhcmp}}  % composite
  \newcommand{\rchan} [0] {\ensuremath{\mathrm{R}}}
@@ -1906,7 +1915,7 @@
 %20181116_deprecated%    \rput[bl](0,0){\latmatall{#1}{24mm}{1} {1} {#2}{#3}{#4}}%
 %20181116_deprecated%    %\psgrid(-0.2,-0.2)(1.4,1.2)%
 %20181116_deprecated%  \end{pspicture}%
-%20181116_deprecated%  }% 
+%20181116_deprecated%  }%
 %20181116_deprecated%\newcommand{\latmatlw}[5]{\latmatall{#1}{24mm}{1} {#2}{#3}{#4}{#5}}% lattice matrix labeled with width scale factor
 %20181116_deprecated%\newcommand{\latmatlh}[5]{\latmatall{#1}{24mm}{#2}{1} {#3}{#4}{#5}}% lattice matrix labeled with height scale factor
 %20181116_deprecated%\newcommand{\latmatls}[6]{\latmatall{#1}{24mm}{#2}{#3}{#4}{#5}{#6}}% lattice matrix labeled with height and width scale factors
