Removed redundant material (same or very similar) from stats.tex that was also in pdfcdf.tex; moved pdf and cdf definitions from pdfcdf.tex to pdf.tex

--- a/common/pdfcdf.tex
+++ b/common/pdfcdf.tex
@@ -21,9 +21,6 @@
 %======================================
 \section{Definitions}
 %======================================
-%=======================================
-%\section{Random Variables}
-%=======================================
 The concept of the \fncte{random variable} is widely used in probability and
 random processes.
 Before discussing what a \fncte{random variable} \emph{is}, 
@@ -49,15 +46,10 @@ What is it then? It is a \structe{function} (next definition).
 In particular, it is a function that maps from an underlying stochastic process into $\R$.
 Any ``\prope{randomness}" (whatever that means) it may \emph{appear} to have comes from the stochastic process it
 is mapping \emph{from}. But the function itself (the \fncte{random variable} itself) is very deterministic and well-defined.
-%
-%A \fncte{random variable} is actually a \hie{function} $\rvX(\omega)$, where
-%$\omega\in\pso$ is an outcome of an experiment.
-%More specifically, in a \structe{probability space} $\ps$,
-%a \fncte{random variable} is a mapping from the set $\pso$ of outcomes to the set of real numbers.
-%What gives it the appearance of being random is that the outcome $\omega$
-%of the experiment appears to be random to the observer.
-%So the \fncte{random variable} $\rvX(\omega)$ is simply a function of an underlying
-%mechanism that appears to be random.
+What gives it the appearance of being random is that the outcome $\omega$
+of the experiment appears to be random to the observer.
+So the \fncte{random variable} $\rvX(\omega)$ is simply a function of an underlying
+mechanism that appears to be random.
 %---------------------------------------
 \begin{definition}
 \index{random variable}
@@ -69,69 +61,6 @@ Let $\ps$ be a \structe{probability space} \xref{def:ps}.
 A \fnctd{random variable} $\rvX$ is a function $\rvX$.
 \end{definition}
 
-The probability information about $\sigma$-algebra $\pse$ is completely
-specified by \fncte{measure} $\psp$.
-However, sometimes it is more convenient to express this same \fncte{measure}
-information in terms of the \fncte{probability density function} or the
-\fncte{cummulative distribution function} of the \structe{probability space}.
-%---------------------------------------
-\begin{definition}
-\footnote{
-  \citerpgc{linden2014}{93}{1107035902}{Definitions 7.1, 7.2}
-  }
-\label{def:pdf}
-\label{def:cdf}
-%---------------------------------------
-Let $\rvX$ a \fncte{random variable} on the \structe{probability space} $\ps$ \xref{def:ps}.
-\defbox{\begin{array}{MM}
-  The \fnctd{cummulative distribution function}
-    &(\fnctd{cdf}) of $\rvX$ is a function $\pcx$ in $\clFor$ such that
-    \\\mc{2}{l}{\indentx\ds\pcx(x) \eqd \psp\setn{\rvX < x }}
-    \\
-  The \fnctd{probability density function}
-    &(\fnctd{pdf}) of $\rvX$ is a function $\ppx$ in $\clFor$ such that
-    \\\mc{2}{l}{\indentx\ds\ppx(x) \eqd \ddx\pcx(x)}
-\end{array}}
-\end{definition}
-
-%---------------------------------------
-\begin{definition}
-\label{def:jointpdf}
-\label{def:jointcdf}
-%---------------------------------------
-Let $\ps$ be a \structe{probability space} \xref{def:ps} and
-$\rvX$ and $\rvY:\pso\to\R$ random variables. Then
-a \fnctd{joint probability density function}    $\ppx:\pse\times\pso\to\intcc{0}{1}$ and
-a \fnctd{joint cumulative distribution function} $\pcx:\pse\times\pso\to\intcc{0}{1}$
-are defined as
-\defbox{\begin{array}{rc>{\ds}lD}
-  \pcxy(x,y) &\eqd& \psp\set{\rvX\le x}{\rvY\le y}
-          & (\fncte{joint cumulative distribution function})
-          \\
-  \ppxy(x,y) &\eqd& \ddy\ddx\pcxy(x,y)
-          & (\fncte{joint probability density function})
-\end{array}}
-\end{definition}
-
-%---------------------------------------
-\begin{definition}
-\label{def:conpdf}
-\label{def:concdf}
-%---------------------------------------
-Let $\ps$ be a \structe{probability space} \xref{def:ps} and
-$\rvX$ a random variable. Then
-a \fnctd{conditional probability density function}    $\ppx:\pse\times\pso\to\intcc{0}{1}$ and
-a \fnctd{conditional cumulative distribution function} $\pcx:\pse\times\pso\to\intcc{0}{1}$
-are defined as
-\defbox{\begin{array}{rc>{\ds}lD}
-  \pcx(x|y) &\eqd& \psp\brb{\rvX \le x|\rvY=y}
-            & (\fncte{conditional cumulative distribution function}---\fncte{cdf})
-            \\
-  \ppx(x|y) &\eqd& \ddx\pcx(x|y)
-  %\ppx(x|y) &\eqd& \lim_{\varepsilon\to 0} \frac{1}{\varepsilon}\psp\brb{x \le\rvX < x+\varepsilon | \rvY=y}
-            & (\fncte{conditional probability density function}---\fncte{pdf})
-\end{array}}
-\end{definition}
 
 %======================================
 \section{Properties}
