Reorganize to better separate into pdf/cdf properties and expectation properties

--- a/common/probmt.tex
+++ b/common/probmt.tex
@@ -472,6 +472,37 @@ and $\setn{y,x_1,x_2,x_3,\ldots}$ a subset of $\setX$.
 
 \end{enumerate}
 \end{proof}
+
+As described in \prefpp{def:ps},
+every \structe{probability space} $\ps$ contains a probability \fncte{measure} $\psp:\pse\to[0,1]$.
+This probability \fncte{measure} has some basic properties as described in
+\pref{thm:P} (next).
+%---------------------------------------
+\begin{theorem}
+\label{thm:P}
+%---------------------------------------
+Let $\ps$ be a \structe{probability space}.
+Let $\setB$ be a set and $\set{\setB_n}{n=1,2,\ldots,\xN}$ a set of sets.
+\thmbox{
+  \brb{\begin{array}{M}
+    $\set{\setB_n}{n=1,2,\ldots,\xN}$ is a \\
+    \structe{partition} of $\setB$.
+  \end{array}}
+  \quad\implies\quad
+  \brb{\begin{array}{Frc>{\ds}l lD}
+    (1).&\psp(\setB)      &=&  \sum_{n=1}^{\xN} \psp(\setB_n)        & \forall \setB\in\pse & and\\
+    (2).&\psp(\setA\setB) &=&  \sum_{n=1}^{\xN} \psp(\setA\setB_n)   & \forall \setA,\setB\in\pse 
+  \end{array}}
+  }
+\end{theorem}
+\begin{proof}
+$\psp$ is a \fncte{measure} and by \prefpp{def:measure}.
+\end{proof}
+
+
+
+
+
 %=======================================
 \section{Examples}
 %=======================================
